# MacSearch

./: .gitignore  AGENTS.md  index.html  mac-search-tool-reference.md  package-lock.json  package.json  pyproject.toml  tailwind.config.ts  tsconfig.json  vite.config.ts  启动命令.md  技术架构基线.md  需求说明 (PRD).md  高保真开发计划清单.md
backend/app/: __init__.py  main.py
backend/app/api/: __init__.py  nl2dsl.py
backend/app/config/: __init__.py  control_rules.py  seed_loader.py
backend/app/control_center/: __init__.py  policy.py
backend/app/db/: __init__.py  local_sqlite.py
backend/app/models/: __init__.py  cloud_contracts.py  nl2dsl.py
backend/tests/: test_cloud_contracts.py  test_control_center_policy.py  test_local_sqlite_schema.py  test_nl2dsl_api.py
config/: control_rules.json  indexer_policy.json  local_seed_rules.json  resource_policy.json  search_syntax.json  shortcut_policy.json
prompts/nl2dsl/: v1.json
src/: App.vue  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  content_store.rs  control_center.rs  global_shortcut.rs  indexer.rs  lib.rs  main.rs  parsers.rs  runtime_index.rs  search.rs
src/components/: IndexSettingsPanel.vue  SearchShell.vue
src/composables/: useIndexerStatus.ts  useLocalSearch.ts  usePreviewContent.ts  useQueryParser.ts  useQuickLookPreview.ts  useSearchFilter.ts  useVirtualWindow.ts
src/stores/: searchStore.ts
src/types/: search.ts
tests/: indexerStatus.test.ts  localSearch.test.ts  previewContent.test.ts  queryParser.test.ts  quickLook.test.ts  searchFilter.test.ts  virtualWindow.test.ts
(+5 files in other folders)
