[project]
name = "maisou"
version = "0.1.0"
description = "Local-first macOS search infrastructure baseline."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.111.0",
  "pydantic>=2.5.0",
  "sqlmodel>=0.0.21",
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
]

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["backend/tests"]
